CSS/responsiv-desighn.css
@media (max-width: 480px) {
  .center-content {
    align-items: center;
    text-align: center;
  }

  .main-about-content {
    padding: 0;
  }

  .about-text {
    font-weight: 500;
  }

  .about-text,
  .about-title {
    left: 0rem;
  }

  .pixle-image-container {
    display: none;
  }

  .advantages-main-container {
    padding-right: 0;
    padding-left: 0;
  }

  .about-section .advantages-content {
    width: 98%;
  }

  .advantages-content .content-title {
    padding: 0;
    display: flex;
    justify-content: center;
    left: 0;
    width: 100%;
    color: black;
    z-index: 8;
  }

  .advantages-content:hover .content-title p {
    left: 0;
    color: var(--white-main--text);
  }

  .hover-word-container {
    display: none;
  }

  .inner-advantges-content {
    background-color: var(--black--background);
  }

  .inner-advantges-content ul li {
    opacity: 1;
  }

  .tools-section {
    padding-right: 1rem;
    padding-left: 1rem;
  }

  .tools-section .general-tools-container {
    flex-direction: column;
  }

  .inner-tool-container {
    width: 100%;
  }

  .highlight-text {
    text-align: center;
  }

  .highlight-section .hl-word {
    color: var(--long--text);
    background-color: transparent;
  }

  .highlight-section {
    padding: 3rem 1rem;
  }

  .animated-title {

    align-items: center;
  }

  .icon-container-1 {
    left: 0;
  }

  .icon-container-2 {
    right: 0;
  }


  .animated-title-container {
    padding: 2rem 0rem;
  }

}



@media (481px <=width <=920px) {

  .tools-section .general-tools-container {
    flex-direction: column;
  }

  .inner-tool-container {
    width: 100%;
  }

  .highlight-text {
    text-align: center;
  }

}

@media (width <430px) {}

@media (768px <=width <=915px) {}

